# Creating_and_using_DLL_modules

./: CMakeLists.txt  README.md  main.cpp
dll/: DynamicLib.cpp  DynamicLib.h
lib/: StaticLib.cpp  StaticLib.h
